Added calibration and passed tests
