# flatbuffers/python/quantra/CalibrateSwaptionModelResponse.py
@@ -1,0 +1,202 @@
+# automatically generated by the FlatBuffers compiler, do not modify
+
+# namespace: quantra
+
+import flatbuffers
+from flatbuffers.compat import import_numpy
+np = import_numpy()
+
+class CalibrateSwaptionModelResponse(object):
+    __slots__ = ['_tab']
+
+    @classmethod
+    def GetRootAs(cls, buf, offset=0):
+        n = flatbuffers.encode.Get(flatbuffers.packer.uoffset, buf, offset)
+        x = CalibrateSwaptionModelResponse()
+        x.Init(buf, n + offset)
+        return x
+
+    @classmethod
+    def GetRootAsCalibrateSwaptionModelResponse(cls, buf, offset=0):
+        """This method is deprecated. Please switch to GetRootAs."""
+        return cls.GetRootAs(buf, offset)
+    # CalibrateSwaptionModelResponse
+    def Init(self, buf, pos):
+        self._tab = flatbuffers.table.Table(buf, pos)
+
+    # CalibrateSwaptionModelResponse
+    def ModelId(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(4))
+        if o != 0:
+            return self._tab.String(o + self._tab.Pos)
+        return None
+
+    # CalibrateSwaptionModelResponse
+    def HwA(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(6))
+        if o != 0:
+            return self._tab.Get(flatbuffers.number_types.Float64Flags, o + self._tab.Pos)
+        return 0.0
+
+    # CalibrateSwaptionModelResponse
+    def HwSigma(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(8))
+        if o != 0:
+            return self._tab.Get(flatbuffers.number_types.Float64Flags, o + self._tab.Pos)
+        return 0.0
+
+    # CalibrateSwaptionModelResponse
+    def Rmse(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(10))
+        if o != 0:
+            return self._tab.Get(flatbuffers.number_types.Float64Flags, o + self._tab.Pos)
+        return 0.0
+
+    # CalibrateSwaptionModelResponse
+    def NumHelpers(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(12))
+        if o != 0:
+            return self._tab.Get(flatbuffers.number_types.Int32Flags, o + self._tab.Pos)
+        return 0
+
+    # CalibrateSwaptionModelResponse
+    def GridRows(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(14))
+        if o != 0:
+            return self._tab.Get(flatbuffers.number_types.Int32Flags, o + self._tab.Pos)
+        return 0
+
+    # CalibrateSwaptionModelResponse
+    def GridCols(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(16))
+        if o != 0:
+            return self._tab.Get(flatbuffers.number_types.Int32Flags, o + self._tab.Pos)
+        return 0
+
+    # CalibrateSwaptionModelResponse
+    def GridPoints(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(18))
+        if o != 0:
+            return self._tab.Get(flatbuffers.number_types.Int32Flags, o + self._tab.Pos)
+        return 0
+
+def CalibrateSwaptionModelResponseStart(builder):
+    builder.StartObject(8)
+
+def Start(builder):
+    CalibrateSwaptionModelResponseStart(builder)
+
+def CalibrateSwaptionModelResponseAddModelId(builder, modelId):
+    builder.PrependUOffsetTRelativeSlot(0, flatbuffers.number_types.UOffsetTFlags.py_type(modelId), 0)
+
+def AddModelId(builder, modelId):
+    CalibrateSwaptionModelResponseAddModelId(builder, modelId)
+
+def CalibrateSwaptionModelResponseAddHwA(builder, hwA):
+    builder.PrependFloat64Slot(1, hwA, 0.0)
+
+def AddHwA(builder, hwA):
+    CalibrateSwaptionModelResponseAddHwA(builder, hwA)
+
+def CalibrateSwaptionModelResponseAddHwSigma(builder, hwSigma):
+    builder.PrependFloat64Slot(2, hwSigma, 0.0)
+
+def AddHwSigma(builder, hwSigma):
+    CalibrateSwaptionModelResponseAddHwSigma(builder, hwSigma)
+
+def CalibrateSwaptionModelResponseAddRmse(builder, rmse):
+    builder.PrependFloat64Slot(3, rmse, 0.0)
+
+def AddRmse(builder, rmse):
+    CalibrateSwaptionModelResponseAddRmse(builder, rmse)
+
+def CalibrateSwaptionModelResponseAddNumHelpers(builder, numHelpers):
+    builder.PrependInt32Slot(4, numHelpers, 0)
+
+def AddNumHelpers(builder, numHelpers):
+    CalibrateSwaptionModelResponseAddNumHelpers(builder, numHelpers)
+
+def CalibrateSwaptionModelResponseAddGridRows(builder, gridRows):
+    builder.PrependInt32Slot(5, gridRows, 0)
+
+def AddGridRows(builder, gridRows):
+    CalibrateSwaptionModelResponseAddGridRows(builder, gridRows)
+
+def CalibrateSwaptionModelResponseAddGridCols(builder, gridCols):
+    builder.PrependInt32Slot(6, gridCols, 0)
+
+def AddGridCols(builder, gridCols):
+    CalibrateSwaptionModelResponseAddGridCols(builder, gridCols)
+
+def CalibrateSwaptionModelResponseAddGridPoints(builder, gridPoints):
+    builder.PrependInt32Slot(7, gridPoints, 0)
+
+def AddGridPoints(builder, gridPoints):
+    CalibrateSwaptionModelResponseAddGridPoints(builder, gridPoints)
+
+def CalibrateSwaptionModelResponseEnd(builder):
+    return builder.EndObject()
+
+def End(builder):
+    return CalibrateSwaptionModelResponseEnd(builder)
+
+
+class CalibrateSwaptionModelResponseT(object):
+
+    # CalibrateSwaptionModelResponseT
+    def __init__(self):
+        self.modelId = None  # type: str
+        self.hwA = 0.0  # type: float
+        self.hwSigma = 0.0  # type: float
+        self.rmse = 0.0  # type: float
+        self.numHelpers = 0  # type: int
+        self.gridRows = 0  # type: int
+        self.gridCols = 0  # type: int
+        self.gridPoints = 0  # type: int
+
+    @classmethod
+    def InitFromBuf(cls, buf, pos):
+        calibrateSwaptionModelResponse = CalibrateSwaptionModelResponse()
+        calibrateSwaptionModelResponse.Init(buf, pos)
+        return cls.InitFromObj(calibrateSwaptionModelResponse)
+
+    @classmethod
+    def InitFromPackedBuf(cls, buf, pos=0):
+        n = flatbuffers.encode.Get(flatbuffers.packer.uoffset, buf, pos)
+        return cls.InitFromBuf(buf, pos+n)
+
+    @classmethod
+    def InitFromObj(cls, calibrateSwaptionModelResponse):
+        x = CalibrateSwaptionModelResponseT()
+        x._UnPack(calibrateSwaptionModelResponse)
+        return x
+
+    # CalibrateSwaptionModelResponseT
+    def _UnPack(self, calibrateSwaptionModelResponse):
+        if calibrateSwaptionModelResponse is None:
+            return
+        self.modelId = calibrateSwaptionModelResponse.ModelId()
+        self.hwA = calibrateSwaptionModelResponse.HwA()
+        self.hwSigma = calibrateSwaptionModelResponse.HwSigma()
+        self.rmse = calibrateSwaptionModelResponse.Rmse()
+        self.numHelpers = calibrateSwaptionModelResponse.NumHelpers()
+        self.gridRows = calibrateSwaptionModelResponse.GridRows()
+        self.gridCols = calibrateSwaptionModelResponse.GridCols()
+        self.gridPoints = calibrateSwaptionModelResponse.GridPoints()
+
+    # CalibrateSwaptionModelResponseT
+    def Pack(self, builder):
+        if self.modelId is not None:
+            modelId = builder.CreateString(self.modelId)
+        CalibrateSwaptionModelResponseStart(builder)
+        if self.modelId is not None:
+            CalibrateSwaptionModelResponseAddModelId(builder, modelId)
+        CalibrateSwaptionModelResponseAddHwA(builder, self.hwA)
+        CalibrateSwaptionModelResponseAddHwSigma(builder, self.hwSigma)
+        CalibrateSwaptionModelResponseAddRmse(builder, self.rmse)
+        CalibrateSwaptionModelResponseAddNumHelpers(builder, self.numHelpers)
+        CalibrateSwaptionModelResponseAddGridRows(builder, self.gridRows)
+        CalibrateSwaptionModelResponseAddGridCols(builder, self.gridCols)
+        CalibrateSwaptionModelResponseAddGridPoints(builder, self.gridPoints)
+        calibrateSwaptionModelResponse = CalibrateSwaptionModelResponseEnd(builder)
+        return calibrateSwaptionModelResponse
